# TCR-DeepInsight

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  gex_training.rst  index.rst  install.rst  intro.rst  knowledge.rst  references.bib  tcr_clustering.rst  tcr_training.rst  tcr_transfer.rst  tcr_transfer_clustering.rst  tutorial.rst
docs/source/_static/css/: custom.css  style.css
docs/source/_static/js/: custom.js
jupyter_notebooks/: TCR-DeepInsight.ipynb  test.ipynb
tcr_deep_insight/: __init__.py
tcr_deep_insight/preprocessing/: _preprocess.py
tcr_deep_insight/tool/: _constants.py  _deep_insight.py  _deep_insight_result.py
tcr_deep_insight/utils/: _tcr.py  _tcr_definitions.py  _utilities.py
