[metadata]
name = tcr_deep_insight
version = 1.0.1
description = tcr_deep_insight
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WanluLiuLab/TCR-DeepInsigh
author = Ziwei Xue
author_email = ziwei.21@intl.zju.edu.cn


[options]
include_package_data = True
dependency_links=['https://download.pytorch.org/whl/cu117']
packages = find:
python_requires = >=3.9
install_requires =
    scatlasvae==1.0.4
    numba==0.57.1
    numpy==1.21.6
    pandas==1.4.2
    omegaconf==2.3.0
    scikit-image==0.20.0
    transformers==4.17.0
    datasets==2.1.0
    anndata==0.8.0
    scanpy==1.8.1
    scikit-learn==0.24.1
    matplotlib==3.3.4
    einops==0.4.1
    biopython==1.79
    seaborn==0.12.2
    tabulate==0.9.0
    umap-learn==0.5.1
    logomaker

[options.extras_require]
docs =
    sphinx==7.3.7
    nbsphinx
    sphinx_rtd_theme
    sphinx-hoverxref

cpu = 
    faiss-cpu==1.7.2
    torch==1.13.1
    torchvision==0.14.1
    torchaudio==0.13.1

gpu =
    faiss-gpu==1.7.2
    torch==1.13.1+cu117
    torchvision==0.14.1+cu117
    torchaudio==0.13.1+cu117

